[gd_scene load_steps=9 format=3 uid="uid://bt6n68qb33rkf"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_xlwpf"]
[ext_resource type="Theme" uid="uid://b47m473ewv6sf" path="res://Components/pause_menu.tres" id="2_4mqkv"]
[ext_resource type="Texture2D" uid="uid://b2d5btlv6vq4l" path="res://Assets/GAME OVER 2.png" id="3_4vnxh"]
[ext_resource type="AudioStream" uid="uid://djaqdi8sgil6i" path="res://Sounds/GAME-OVER_Audley_Fergine.wav" id="4_esobb"]

[sub_resource type="Animation" id="Animation_ahgyo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yeuyn"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gv1my"]
_data = {
"RESET": SubResource("Animation_ahgyo"),
"fade_in": SubResource("Animation_yeuyn")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ua3y"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlwpf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -642.0
offset_top = -481.0
offset_right = 638.0
offset_bottom = 474.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gv1my")
}
autoplay = "fade_in"

[node name="gameOver_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_esobb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -641.0
offset_top = -480.0
offset_right = 641.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver_Title" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_4vnxh")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/separator = SubResource("StyleBoxEmpty_1ua3y")

[node name="Restart_Btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_4mqkv")
text = "RESTART"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/separator = SubResource("StyleBoxEmpty_1ua3y")

[node name="Quit_Btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_4mqkv")
text = "QUIT GAME"

[connection signal="pressed" from="VBoxContainer/Restart_Btn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Btn" to="." method="_on_quit_btn_pressed"]
